# promptkeeper

./: .autopilot.json  .dockerignore  .gitignore  DEPLOY.md  docker-compose.yaml  fly.toml
.github/workflows/: fly-deploy.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.release  README.md  backend-specs.md  fly.toml
backend/docs/: TEST-SCENARIOS.md
backend/src/: db.rs  execute.rs  lib.rs  main.rs  providers.rs  routes.rs  templates.rs
backend/src/auth/: api_token.rs  crypto.rs  mod.rs  session.rs  types.rs
backend/src/put/: mod.rs  service.rs
backend/tests/: api_tests.rs
cli/: Makefile  README.md  go.mod  go.sum  main.go
cli/cmd/: exec.go  register.go  root.go  set.go
cli/cmd/store/: key.go  prompt.go  root.go
cli/internal/api/: client.go
cli/internal/config/: config.go
cli/internal/validate/: validate.go
docs/: AUTH-AND-CONTEXT.md  FLOW-PUT-EXECUTE.md
frontend/: README.md  analytics.html  analytics.js  api-status.html  gdpr-dpa.html  index.html  privacy.html  script.js  security-whitepaper.html  styles.css  terms.html  trust-center.html
frontend/admin/: README.md  package.json  tailwind.config.ts
frontend/admin/src/app/: globals.css  (+2 more)
schema/: 001_prompt_management.sql  002_auth_and_workspaces.sql  003_api_tokens.sql  004_test_providers.sql  README.md  REVIEW.md
scripts/: docker-entrypoint.sh  wait-for-db.sh
sdk/: README.md  package.json
sdk/src/: client.ts  index.ts  types.ts  validate.ts
sdks/android/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
sdks/ios/: Package.swift  README.md
(+22 files in other folders)
