[package]
name = "promptkeeper"
version = "0.1.0"
edition = "2021"
description = "High-performance LLM proxy with streaming support"

[dependencies]
axum = { version = "0.7", features = ["json", "macros", "tokio", "http1"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handlebars = "4.4"
reqwest = { version = "0.12", features = ["stream", "json"] }
tower-http = { version = "0.5", features = ["trace", "fs"] }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
bytes = "1.5"
futures-util = "0.3"
thiserror = "1.0"
anyhow = "1.0"
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
uuid = { version = "1.6", features = ["v4", "serde"] }
oauth2 = "4.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
aws-config = "1.1"
aws-sdk-kms = "1.0"
zeroize = "1.7"
aead = "0.5"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
